added more filter tools

--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="options">
+        <select class="chooseProgram"></select>
+        <input type="checkbox" name="Основные" class="goal">
+        <label for="Основные">Основные</label>
+        <input type="checkbox" name="Оригиналы" class="original">
+        <label for="Оригиналы">Оригиналы</label>
+        <input type="checkbox" name="Бюджет" class="budget">
+        <label for="Бюджет">Бюджет</label>
+      </div>
+      <table class="entrants"></table>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
